Closed
Bug 536230
Opened 16 years ago
Closed 16 years ago
Crash or Hang [@ nsCookieService::RemoveCookieFromList(nsListIter const&)]
Categories
(Core :: Networking: Cookies, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: xfsunoles, Assigned: dwitte)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
685 bytes,
patch
|
sdwilsh
:
review+
|
Details | Diff | Splinter Review |
0 @0xffff139f
1 @0xffff0875
2 XUL nsCookieService::RemoveCookieFromList nsTArray.h:680
3 XUL nsCookieService::PurgeCookies netwerk/cookie/src/nsCookieService.cpp:2389
4 XUL nsCookieService::AddInternal netwerk/cookie/src/nsCookieService.cpp:1656
5 XUL nsCookieService::SetCookieInternal netwerk/cookie/src/nsCookieService.cpp:1572
6 XUL nsCookieService::SetCookieStringInternal netwerk/cookie/src/nsCookieService.cpp:853
7 XUL nsCookieService::SetCookieString netwerk/cookie/src/nsCookieService.cpp:784
8 XUL nsHTMLDocument::SetCookie content/html/document/src/nsHTMLDocument.cpp:1800
9 XUL nsIDOMHTMLDocument_SetCookie dom_quickstubs.cpp:12364
http://crash-stats.mozilla.com/report/index/3ffe05b6-0461-4fe6-9c33-42dd02091220
It is a very annoying bugs that can made harder to view any pages. I believe it is a regression from Bug 321624.
| Assignee | ||
Comment 1•16 years ago
|
||
Do you have steps to reproduce, here? If it can't be reproduced reliably, how easy is it to reproduce / how often does it happen? If the answer to the above two questions is "no" and "not often", can you please provide a cookie log (clear your cookies, shut down the browser, and follow the instructions at https://developer.mozilla.org/en/Creating_a_Cookie_Log)?
| Assignee | ||
Comment 2•16 years ago
|
||
Boooo.
Updated•16 years ago
|
Attachment #418760 -
Flags: review?(sdwilsh) → review+
Comment 3•16 years ago
|
||
Comment on attachment 418760 [details] [diff] [review]
patch v1
r=sdwilsh
| Assignee | ||
Comment 4•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Severity: major → critical
Summary: Crash or Hang @ [nsCookieService::RemoveCookieFromList(nsListIter const&)] → Crash or Hang [@ nsCookieService::RemoveCookieFromList(nsListIter const&)]
Updated•14 years ago
|
Crash Signature: [@ nsCookieService::RemoveCookieFromList(nsListIter const&)]
You need to log in
before you can comment on or make changes to this bug.
Description
•