Bug 536230 - Crash or Hang @ [nsCookieService::RemoveCookieFromList(nsListIter const&)]. r=sdwilsh